# icy2-server

./: .gitignore  CARRY_OVER.md  CHANGELOG.md  LICENSE.md  Makefile.am  README.md  autogen.sh  bootstrap.sh  config.h.in  configure.ac
.github/workflows/: dev.yaml
config/: mcaster1.yaml
include/: auth_token.h  common_types.h  config_parser.h  helper.h  icy2_server.h  icy_handler.h  php_handler.h  server.h  ssl_manager.h
scripts/: configure_yaml.sh
src/: Makefile.am  auth_token.cpp  config_parser.cpp  helper.cpp  icy_handler.cpp  main.cpp  php_handler.cpp  server.cpp  ssl_manager.cpp
ssl/: cert.conf
